--- a/index.html
+++ b/index.html
@@ -4,30 +4,32 @@
     <meta charset="utf-8">
     <title>Web App Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700&display=swap" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
   </head>
-  <body>
-    <header>
+  <body class= “grid-container">
+    <header class="header">
       <h1>Your<span>App</span><sup>TM</sup></h1>
-      <div>
-        <img src="icons/icon-bell.svg" alt="Bell icon" height="87px" width="100px">
+      <div class="header-bell-icon">
+        <img src="icons/icon-bell.svg" alt="Bell icon">
       </div>
-      <img src="images/member-2.jpg" alt="Profile picture">
+      <div class="vertical-line">&nbsp;</div>
+      <img src="images/member-2.jpg" alt="Profile picture" class="header-image">
       <h3>Josh Sullivan</h3>
     </header>
     <nav>
       <ul>
         <li>
-          <a href=""><img src="icons/icon-dashboard.svg" alt=""></a>
+          <a href=""><img src="icons/icon-dashboard.svg" alt="" height="25px" width="28px"></a>
         </li>
         <li>
-          <a href=""><img src="icons/icon-members.svg" alt=""></a>
+          <a href=""><img src="icons/icon-members.svg" alt="" height="25px" width="28px"></a>
         </li>
         <li>
-          <a href=""><img src="icons/icon-visits.svg" alt=""></a>
+          <a href=""><img src="icons/icon-visits.svg" alt="" height="25px" width="28px"></a>
         </li>
         <li>
-          <a href=""><img src="icons/icon-settings.svg" alt=""></a>
+          <a href=""><img src="icons/icon-settings.svg" alt="" height="25px" width="28px"></a>
         </li>
       </ul>
     </nav>
