add alert banner

--- a/index.html
+++ b/index.html
@@ -293,5 +293,6 @@
 
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
-  </body>
+    <script type="text/javascript" src="app.js"></script>
+</body>
 </html>
