--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
       <h1>Your<span>App</span><sup>TM</sup></h1>
       <div class="header-bell-icon">
         <img src="icons/icon-bell.svg" alt="Bell icon">
+        <span id="notification-alert" class="notification-alert">&nbsp;</span>
+        <ul class="notification-list">
+          <li>Victoria Chambers commented on YourApp's SEO Tips<span class="notification-close">&times;</span></li>
+          <li>Dale Byrd likes the post Facebook's Changes for 2016<span class="notification-close">&times;</span></li>
+          <li>Dawn Wood commented on Facebook's Changes for 2016<span class="notification-close">&times;</span></li>
+        </ul>
       </div>
       <div class="vertical-line"></div>
       <img src="images/member-2.jpg" alt="Profile picture" class="header-profile-image">
