add charts and alerts for user and message input fields

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Web App Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="css/toggle-switch.css">
     <link href="css/styles.css" rel="stylesheet">
   </head>
@@ -64,7 +64,7 @@
         <div class="traffic-header">
           <h3 class="hg-3">Traffic</h3>
           <ul class="traffic-nav">
-            <li class="traffic-nav-link">Hourly</li>
+            <li class="traffic-nav-link selected">Hourly</li>
             <li class="traffic-nav-link">Daily</li>
             <li class="traffic-nav-link">Weekly</li>
             <li class="traffic-nav-link">Monthly</li>
