fix notification alert posotion and add storageLocation function draft for timezone selection

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
           </span>
         </label>
 
-        <label class="switch-light switch-ios border" onclick="">
+        <label class="switch-light switch-ios" onclick="">
           <input type="checkbox">
           <strong class="switch-light-text">
             Set Profile to Public
@@ -257,39 +257,39 @@
         </label>
         <select class="form-field" id="timezone">
           <option disabled selected>Select a Timezone</option>
-          <option> Eniwetok, Kwajalein</option>
-          <option> Midway Island, Samoa</option>
-          <option> Hawaii</option>
-          <option> Alaska</option>
-          <option> Pacific Time </option>
-          <option> Mountain Time </option>
-          <option> Central Time, Mexico City</option>
-          <option> Eastern Time, Bogota, Lima</option>
-          <option> Caracas</option>
-          <option> Atlantic Time, La Paz, Santiago</option>
-          <option> Newfoundland</option>
-          <option> Brazil, Buenos Aires, Georgetown</option>
-          <option> Mid-Atlantic</option>
-          <option> Azores, Cape Verde Islands</option>
-          <option> Western Europe Time, London, Lisbon, Casablanca, Greenwich</option>
-          <option> Brussels, Copenhagen, Madrid, Paris</option>
-          <option> Kaliningrad, South Africa, Cairo</option>
-          <option> Baghdad, Riyadh, Moscow, St. Petersburg</option>
-          <option> Tehran</option>
-          <option> Abu Dhabi, Muscat, Yerevan, Baku, Tbilisi</option>
-          <option> Kabul</option>
-          <option> Ekaterinburg, Islamabad, Karachi, Tashkent</option>
-          <option> Mumbai, Kolkata, Chennai, New Delhi</option>
-          <option> Kathmandu</option>
-          <option> Almaty, Dhaka, Colombo</option>
-          <option> Yangon, Cocos Islands</option>
-          <option> Bangkok, Hanoi, Jakarta</option>
-          <option> Beijing, Perth, Singapore, Hong Kong</option>
-          <option> Tokyo, Seoul, Osaka, Sapporo, Yakutsk</option>
-          <option> Adelaide, Darwin</option>
-          <option> Eastern Australia, Guam, Vladivostok</option>
-          <option> Magadan, Solomon Islands, New Caledonia</option>
-          <option> Auckland, Wellington, Fiji, Kamchatka</option>
+          <option>Eniwetok, Kwajalein</option>
+          <option>Midway Island, Samoa</option>
+          <option>Hawaii</option>
+          <option>Alaska</option>
+          <option>Pacific Time </option>
+          <option>Mountain Time </option>
+          <option>Central Time, Mexico City</option>
+          <option>Eastern Time, Bogota, Lima</option>
+          <option>Caracas</option>
+          <option>Atlantic Time, La Paz, Santiago</option>
+          <option>Newfoundland</option>
+          <option>Brazil, Buenos Aires, Georgetown</option>
+          <option>Mid-Atlantic</option>
+          <option>Azores, Cape Verde Islands</option>
+          <option>Western Europe Time, London, Lisbon, Casablanca, Greenwich</option>
+          <option>Brussels, Copenhagen, Madrid, Paris</option>
+          <option>Kaliningrad, South Africa, Cairo</option>
+          <option>Baghdad, Riyadh, Moscow, St. Petersburg</option>
+          <option>Tehran</option>
+          <option>Abu Dhabi, Muscat, Yerevan, Baku, Tbilisi</option>
+          <option>Kabul</option>
+          <option>Ekaterinburg, Islamabad, Karachi, Tashkent</option>
+          <option>Mumbai, Kolkata, Chennai, New Delhi</option>
+          <option>Kathmandu</option>
+          <option>Almaty, Dhaka, Colombo</option>
+          <option>Yangon, Cocos Islands</option>
+          <option>Bangkok, Hanoi, Jakarta</option>
+          <option>Beijing, Perth, Singapore, Hong Kong</option>
+          <option>Tokyo, Seoul, Osaka, Sapporo, Yakutsk</option>
+          <option>Adelaide, Darwin</option>
+          <option>Eastern Australia, Guam, Vladivostok</option>
+          <option>Magadan, Solomon Islands, New Caledonia</option>
+          <option>Auckland, Wellington, Fiji, Kamchatka</option>
         </select>
         <div class="settings-button" >
           <button class="button-primary" id="save">Save</button>
