move click event of notification from alert icon to bell icon and fix local storage issue of profile settings

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
       <section class="message">
         <h3 class="hg-3">Message User</h3>
-        <form class="widget-container">
+        <form class="widget-container" autocomplete="off">
           <input type="text" placeholder="Search for User" class="form-field" id="userField">
           <textarea placeholder="Message for User" class="form-area" id= "messageField" ></textarea>
           <button class="button-primary" id="send" >Send</button>
@@ -232,7 +232,7 @@
       </section>
       <section class="settings">
         <h3 class="hg-3">Settings</h3>
-        <label class="switch-light switch-ios" onclick="">
+        <label class="switch-light switch-ios">
           <input type="checkbox">
           <strong class="switch-light-text">
             Send Email Notifications
@@ -244,7 +244,7 @@
           </span>
         </label>
 
-        <label class="switch-light switch-ios" onclick="">
+        <label class="switch-light switch-ios">
           <input type="checkbox">
           <strong class="switch-light-text">
             Set Profile to Public
