--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Web App Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="css/toggle-switch.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/toggle-switch.css">
     <link href="css/styles.css" rel="stylesheet">
   </head>
   <body class="grid-container">
