--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="header-bell-icon">
         <img src="icons/icon-bell.svg" alt="Bell icon">
         <span id="notification-alert" class="notification-alert">&nbsp;</span>
-        <ul class="notification-list">
+        <ul class="notification-list" style="display:none">
           <li>Victoria Chambers commented on YourApp's SEO Tips<span class="notification-close">&times;</span></li>
           <li>Dale Byrd likes the post Facebook's Changes for 2016<span class="notification-close">&times;</span></li>
           <li>Dawn Wood commented on Facebook's Changes for 2016<span class="notification-close">&times;</span></li>
